--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h2 class="title">Evkeev Portfolio</h2>
                     <br>
                     <p>
-                      Веб-сайт с моими pet-проектами. В разделе About me вы можете почитать о каждом проекте, а меню выбора слева сверху, удачного пользования 0_0
+                      Веб-сайт с моими pet-проектами. В разделе About me вы сможете почитать о каждом проекте, а меню для выбора слева сверху, удачного пользования 0_0
                     </p>
                   </div>
                 </div>
